--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: katewolfemassage@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://katewolfe.com" # the base hostname & protocol for your site
-twitter_username: k8wolfemassage
+twitter_username: k8massage
 github_username:  katewolfe
 
 # Build settings
